--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
 
 	min-height: 100vh;
 	height: 100%;
-	background-image: linear-gradient(55deg, gold, violet);
+	background-image: linear-gradient(55deg, gold, black, gold, black, gold);
 }
 
 code {
